resources/manifests/traefik_middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: workflow-prefix
spec:
  stripPrefix:
    prefixes:
    - /workflows/
